# seapipy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: python-app.yml  python-publish.yml
docs/: api.rst  conf.py  examples.rst  index.rst  lattice_class.rst  requirements.txt  surface_evolver.rst
docs/_templates/autosummary/: module.rst
examples/: horizontal_furrow.ipynb  simple_tissue.ipynb
seapi/: lattice_class.py
seapipy/: __init__.py  command.py  example_tissues.py  lattice_class.py  surface_evolver.py
tests/: test_lattice_class.py
