[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seapipy"
version = "0.2.0"
description = "A Surface evolver API for python"
readme = "README.md"
authors = [{ name = "Augusto Borges", email = "borges.augustoar@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research"
]
keywords = ["Surface Evolver", "API", "Vertex model"]
dependencies = [
    "matplotlib >= 3.6.2",
    "numpy >= 1.23.4",
    "pytest >= 7.2.0",
    "scipy >= 1.9.3",
    "setuptools >= 60.2.0",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/borgesaugusto/seapipy/"
